--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -106,7 +106,7 @@
 
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
-                @if(ViewBag.TareasPendientes > 0)
+                @if(ViewBag.TareasPendientes.Count > 0)
                 {
 
             
