--- a/Views/Account/Registrarse.cshtml
+++ b/Views/Account/Registrarse.cshtml
@@ -28,12 +28,21 @@
                     <li>
                         <input type="text" name="userName" placeholder="Nombre de usuario">
                     </li>
+                    @if(ViewBag.Mensaje != null)
+                     {
+                        <p> @ViewBag.Mensaje </p>
+                     }
                     <li>
                         <input type="password" name="contraseña" placeholder="Contraseña">
                     </li>
                     <li>
                         <input type="password" name="contraseña1" placeholder="Contraseña">
                     </li>
+                    @if(@ViewBag.MensajeContraseña != null)
+                 {
+                    <p> @ViewBag.MensajeContraseña </p>
+                    }
+                  
                     <li>
                         <input type="text" name="email" placeholder="Email">
                     </li>
