--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -13,9 +13,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-    <section class="imgTandem">
-        <img src="IMG/Tandem.png" alt="Tandem">
-    </section>
+ 
 
     <section class="carousel-infinito">
         <div class="carousel-track">
@@ -97,7 +95,7 @@
     {
         <div class="ir a Chats">
             <h2>¿Ya hablaste con alguien hoy?</h2>
-            <img src="~/Content/Images/fotoChats.png" alt="Logo Tandem" class="nav-logo">
+            <img src="~/Imagenes/fotoChats.png" alt="Logo Tandem" class="nav-logo">
             <a href='@Url.Action("Actividades", "Home")' class="botonComenzarAct">Habla Ahora</a>
         </div>
 
