--- a/Views/Home/Perfil.cshtml
+++ b/Views/Home/Perfil.cshtml
@@ -125,7 +125,7 @@
             </section>
         }
         
-        <a href='@Url.Action(ViewBag.TocoMasPefil ? "Perfil" : "VerMasPerfil", "Home")' class="nav-link" >
+     <a href='@Url.Action(ViewBag.TocoMasPefil ? "Perfil" : "VerMasPerfil", "Home")' class="edit-profile-btn" >
             @(ViewBag.TocoMasPefil ? "Ver menos datos" : "Ver más datos")
         </a> 
     </div>
