--- a/Views/Account/Registrarse.cshtml
+++ b/Views/Account/Registrarse.cshtml
@@ -26,25 +26,25 @@
             <form method="post" action='@Url.Action("Registrarse2", "Account")'>
                 <ul>
                     <li>
-                        <input type="text" name="userName" placeholder="Nombre de usuario">
+                        <input type="text" name="userName" placeholder="Nombre de usuario" required>
                     </li>
                     @if(ViewBag.Mensaje != null)
                      {
-                        <p> @ViewBag.Mensaje </p>
+                        <p style="color: red;"> @ViewBag.Mensaje </p>
                      }
                     <li>
-                        <input type="password" name="contraseña" placeholder="Contraseña">
+                        <input type="password" name="contraseña" placeholder="Contraseña" required>
                     </li>
                     <li>
-                        <input type="password" name="contraseña1" placeholder="Contraseña">
+                        <input type="password" name="contraseña1" placeholder="Contraseña" required>
                     </li>
                     @if(@ViewBag.MensajeContraseña != null)
-                 {
-                    <p> @ViewBag.MensajeContraseña </p>
+                    {
+                        <p style="color: red;"> @ViewBag.MensajeContraseña </p>
                     }
                   
                     <li>
-                        <input type="text" name="email" placeholder="Email">
+                        <input type="text" name="email" placeholder="Email" required>
                     </li>
                 </ul>
 
